updated scrollbar bug and checkbox bug

--- a/src/components/FieldBox/FieldBox.module.css
+++ b/src/components/FieldBox/FieldBox.module.css
@@ -37,7 +37,7 @@
   }
 
 .container__fields{
-    overflow-y:scroll;
+    overflow-y:auto;
     height: 220px;
 }
 
@@ -76,15 +76,17 @@
 }
 
 .container__fields input[type="checkbox"] {
-    appearance: none;
-    -webkit-appearance: none;
-    width: 18px;
-    background-color: var(--background-color);
-    border: 1px solid var(--accent-head-color);
-    border-radius: 2px;
-    cursor: pointer;
-    margin-bottom: 3px;
-    position: relative;
+  appearance: none;
+  -webkit-appearance: none;
+  width: 18px;
+  height: 18px;
+  flex-shrink: 0;
+  background-color: var(--background-color);
+  border: 1px solid var(--accent-head-color);
+  border-radius: 2px;
+  cursor: pointer;
+  margin-bottom: 3px;
+  position: relative;
   }
   
   .container__fields input[type="checkbox"]:hover {
@@ -102,6 +104,3 @@
     border-width: 0 2px 2px 0;
     transform: rotate(45deg);
   }
-  
-  
-  
